add validated field to rule
