# eleusish-api/server/api/controllers/rules/controller.ts
@@ -27,6 +27,20 @@ export class Controller {
       res.status(400).send(e.message)
     }
   }
+
+  async update(req: Request, res: Response): Promise<void> {
+    const id = req.params['id']
+    const { validated, ...otherFields } = req.body
+    if (validated == null || Object.keys(otherFields).length !== 0) {
+      res.status(406).send("Can't update given fields.")
+    }
+    try {
+      const rule = await RulesService.validate(id, validated)
+      res.status(200).send(rule)
+    } catch (e) {
+      res.status(404).send(e.message)
+    }
+  }
 }
 
 export default new Controller()
