# eleusish-api/server/api/domain/rules/rule.ts
@@ -4,6 +4,7 @@ interface Rule {
   id: string
   code: string
   author: Player
+  validated: boolean
 }
 
 export { Rule }
