# eleusish-api/server/db/entity/Rule.ts
@@ -12,4 +12,7 @@ export class Rule {
 
   @Column()
   code: string
+
+  @Column()
+  validated: boolean
 }
